--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,4 +10,43 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+    background-color: white;
+    height: 500px;
+    width: 250px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 5px;
+}
+
+section#login > div#imagem {
+    background: #5f2c82 url(../imagens/imagem.jpg) no-repeat center center;
+    background-size: cover;
+    display: block;
+    height: 200px;
+}
+
+section#login > div#form {
+    display: block;
+    padding: 10px;
 }
