--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,6 +37,8 @@ section#login {
     width: 250px;
     border-radius: 15px;
     box-shadow: 2px 2px 5px;
+
+    transition: width 0.5s, height 0.5s;
 }
 
 section#login > div#imagem {
